data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2230.wast
;; 1. **Test Description**: A simple nested block where the inner block's `end` is missing.    **Constraint**: Ensuring that inner blocks are correctly terminated with an `end` instruction.    **Relation to Mismanagement**: Tests if the implementation can detect and properly handle unterminated nested blocks.    ```    block      block      end    end    ```

(assert_invalid
  (module
    (func
      block
        block
      end
    )
  )
  "unexpected end of section or function"
)